# athas

docs/: EXTENSION_SETUP.md
docs/contributing/: EXTENSION_MANIFEST.md
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs  menu.rs
src-tauri/src/commands/: extensions.rs  lsp.rs
src-tauri/src/extensions/: installer.rs  mod.rs  types.rs
src-tauri/src/lsp/: manager.rs
src/extensions/bundled/typescript/: extension.complete-example.json
src/extensions/hooks/: use-extension-install-prompt.ts
src/extensions/registry/: extension-store.ts
src/extensions/types/: extension-manifest.ts
src/features/editor/components/: editor-overlay.tsx  input-layer.tsx
src/features/editor/lsp/: lsp-client.ts
src/features/editor/stores/: buffer-store.ts
src/features/global-search/components/: content-global-search.tsx  search-match-item.tsx
src/features/layout/components/sidebar/: main-sidebar.tsx
src/features/settings/components/: settings-dialog.tsx
src/features/settings/components/tabs/: extensions-settings.tsx
src/features/terminal/components/: terminal-container.tsx
src/ui/: toast.tsx
